Fixed items alignment

--- a/frontend/src/app/nav-bar/nav-bar.component.css
+++ b/frontend/src/app/nav-bar/nav-bar.component.css
@@ -2,6 +2,11 @@
 	margin-bottom: 96px;
 }
 
+.button-row{
+	display: flex;
+	justify-content: flex-end;
+}
+
 .navbar-brand {
   font-family: "helvetica";
   font-size: 20px;
@@ -16,11 +21,11 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #212121;
+	background-color: #212121;
+	height: 100px;
 }
 
 .nabvar-button {
-    float: left;
     display: block;
     color: white;
     text-align: center;
@@ -50,7 +55,6 @@ a ul{
 } */
 
 .nabvar-logout-button{
-  float: right;
   display: block;
   color: white;
   text-align: center;
@@ -60,10 +64,13 @@ a ul{
   text-decoration: none;
   border-radius: 50px;
   border-width: 2.5px;
+  font-weight: 300;
+  letter-spacing: 3px;
+  font-size: 12px;
+  height: 50px;
 }
 
 .nabvar-round-button{
-  float: right;
   display: block;
   color: white;
   text-align: center;
